# json-api

./: .bazelignore  .bazelrc  .gitignore  BUILD  CODEOWNERS  README.md  azure-pipelines.yml  build.sh  fmt.sh  security-evidence.md  try-delete.sh
bazel_tools/: BUILD.bazel
bazel_tools/scalapb/: BUILD.bazel
ci/: build-unix.yml  build.yml  check-protobuf-stability.sh  configure-bazel.sh  prs.yml
ci/cron/: daily-compat.yml
ci/cron/src/: Main.hs
compatibility/: .bazelrc
compiler/daml-lf-ast/: BUILD.bazel
compiler/damlc/: BUILD.bazel
compiler/damlc/daml-desugar/: BUILD.bazel
compiler/damlc/daml-doc/: BUILD.bazel
compiler/damlc/daml-ide-core/: BUILD.bazel
compiler/damlc/daml-lf-conversion/: BUILD.bazel
compiler/damlc/daml-package-config/: BUILD.bazel
compiler/damlc/tests/: BUILD.bazel
compiler/scenario-service/client/: BUILD.bazel
daml-assistant/: BUILD.bazel
daml-assistant/daml-helper/: BUILD.bazel
daml-assistant/daml-helper/test/DA/Daml/Helper/Test/: Deployment.hs
daml-lf/archive/: BUILD.bazel
daml-lf/data/: BUILD.bazel
daml-lf/engine/: BUILD.bazel
daml-lf/interface/: BUILD.bazel
daml-lf/interpreter/: BUILD.bazel
daml-lf/language/: BUILD.bazel
daml-lf/scenario-interpreter/: BUILD.bazel
daml-lf/transaction/: BUILD.bazel
daml-lf/validation/: BUILD.bazel
daml-script/daml/: BUILD.bazel
daml-script/runner/: BUILD.bazel
docs/: BUILD.bazel
language-support/hs/bindings/: BUILD.bazel
language-support/java/bindings/: BUILD.bazel
language-support/scala/bindings/: BUILD.bazel
language-support/scala/bindings-akka/: BUILD.bazel
ledger-api/grpc-definitions/: BUILD.bazel
ledger-api/rs-grpc-akka/: BUILD.bazel
ledger-api/rs-grpc-bridge/: BUILD.bazel
ledger-api/sample-service/: BUILD.bazel
ledger-api/testing-utils/: BUILD.bazel
ledger/caching/: BUILD.bazel
ledger/error/: BUILD.bazel
ledger/ledger-api-auth/: BUILD.bazel
ledger/ledger-api-client/: BUILD.bazel
ledger/ledger-api-common/: BUILD.bazel
ledger/ledger-api-domain/: BUILD.bazel
ledger/ledger-configuration/: BUILD.bazel
ledger/ledger-grpc/: BUILD.bazel
ledger/ledger-resources/: BUILD.bazel
ledger/ledger-runner-common/: BUILD.bazel
ledger/metrics/: BUILD.bazel
ledger/participant-integration-api/: BUILD.bazel
ledger/participant-state/: BUILD.bazel
ledger/sandbox-common/: BUILD.bazel
ledger/sandbox-on-x/: BUILD.bazel
ledger/test-common/: BUILD.bazel
ledger/test-common/test-certificates/: BUILD.bazel
libs-haskell/bazel-runfiles/: BUILD.bazel
libs-haskell/da-hs-base/: BUILD.bazel
libs-haskell/da-hs-base/src/DA/: PortFile.hs
libs-scala/concurrent/: BUILD.bazel
libs-scala/contextualized-logging/: BUILD.bazel
libs-scala/crypto/: BUILD.bazel
libs-scala/db-utils/: BUILD.bazel
libs-scala/doobie-slf4j/: BUILD.bazel
libs-scala/gatling-utils/: BUILD.bazel
libs-scala/grpc-reverse-proxy/: BUILD.bazel
libs-scala/grpc-server-reflection-client/: BUILD.bazel
libs-scala/grpc-utils/: BUILD.bazel
libs-scala/logging-entries/: BUILD.bazel
libs-scala/nameof/: BUILD.bazel
libs-scala/nonempty/: BUILD.bazel
libs-scala/oracle-testing/: BUILD.bazel
libs-scala/ports/: BUILD.bazel
libs-scala/postgresql-testing/: BUILD.bazel
libs-scala/resources/: BUILD.bazel
libs-scala/resources-akka/: BUILD.bazel
libs-scala/resources-grpc/: BUILD.bazel
libs-scala/safe-proto/: BUILD.bazel
libs-scala/scala-utils/: BUILD.bazel
libs-scala/scalatest-utils/: BUILD.bazel
libs-scala/test-evidence/scalatest/: BUILD.bazel
libs-scala/test-evidence/tag/: BUILD.bazel
libs-scala/timer-utils/: BUILD.bazel
nix/: default.nix
rules_daml/: BUILD.bazel
runtime-components/jdbc-drivers/: BUILD.bazel
runtime-components/non-repudiation/: BUILD.bazel
runtime-components/non-repudiation-client/: BUILD.bazel
runtime-components/non-repudiation-postgresql/: BUILD.bazel
runtime-components/non-repudiation-resources/: BUILD.bazel
security/: EvidenceSecurity.hs
templates/create-daml-app-test-resources/: index.test.ts
