# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//bazel_tools:haskell.bzl", "da_haskell_library")

# This library is intended to be used by applications called by the assistant,
# e.g., damlc, to get the names of the various environment variables set by the assistant.
da_haskell_library(
    name = "daml-project-config",
    srcs = glob(["daml-project-config/**/*.hs"]),
    hackage_deps = [
        "aeson",
        "base",
        "directory",
        "extra",
        "filepath",
        "lens",
        "safe-exceptions",
        "semver",
        "text",
        "yaml",
    ],
    src_strip_prefix = "daml-project-config",
    visibility = ["//visibility:public"],
    deps = [],
)
