# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//bazel_tools:haskell.bzl", "da_haskell_library")

da_haskell_library(
    name = "daml-helper-lib",
    srcs = glob(
        ["src/**/*.hs"],
        exclude = ["src/DA/Daml/Helper/Main.hs"],
    ),
    hackage_deps = [
        "aeson",
        "ansi-terminal",
        "async",
        "base",
        "bytestring",
        "conduit",
        "conduit-extra",
        "containers",
        "directory",
        "extra",
        "filepath",
        "grpc-haskell-core",
        "http-conduit",
        "http-types",
        "jwt",
        "lens",
        "lens-aeson",
        "monad-loops",
        "network",
        "open-browser",
        "optparse-applicative",
        "process",
        "safe-exceptions",
        "text",
        "typed-process",
        "unordered-containers",
        "utf8-string",
        "uuid",
        "vector",
        "yaml",
        "aeson-pretty",
        "time",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:sdk-version-hs-lib",
        "//compiler/daml-lf-ast",
        "//compiler/daml-lf-proto",
        "//compiler/damlc/daml-compiler",
        "//compiler/damlc/daml-package-config",
        "//daml-assistant:daml-project-config",
        "//language-support/hs/bindings:hs-ledger",
        "//ledger-api/grpc-definitions:ledger-api-haskellpb",
        "//libs-haskell/da-hs-base",
    ],
)
