# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_library",
    "lf_scalacopts_stricter",
)

da_scala_library(
    name = "interpreter",
    srcs = glob(["src/main/**/*.scala"]),
    scala_deps = [
        "@maven//:io_spray_spray_json",
        "@maven//:org_scalaz_scalaz_core",
        "@maven//:org_typelevel_paiges_core",
    ],
    scalacopts = lf_scalacopts_stricter,
    tags = ["maven_coordinates=com.daml:daml-lf-interpreter:__VERSION__"],
    visibility = [
        "//compiler/repl-service:__subpackages__",
        "//compiler/scenario-service:__subpackages__",
        "//daml-lf:__subpackages__",
        "//daml-script:__subpackages__",
        "//ledger:__subpackages__",
        "//triggers:__subpackages__",
    ],
    deps = [
        "//daml-lf/data",
        "//daml-lf/language",
        "//daml-lf/transaction",
        "//daml-lf/validation",
        "//libs-scala/contextualized-logging",
        "//libs-scala/nameof",
        "//libs-scala/scala-utils",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:org_apache_commons_commons_text",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
