# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_library",
    "lf_scalacopts_stricter",
)

da_scala_library(
    name = "scenario-interpreter",
    srcs = glob(["src/main/**/*.scala"]),
    main_class = "com.daml.lf.speedy.Main",
    scala_deps = ["@maven//:org_typelevel_paiges_core"],
    scalacopts = lf_scalacopts_stricter,
    tags = ["maven_coordinates=com.daml:daml-lf-scenario-interpreter:__VERSION__"],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//daml-lf/data",
        "//daml-lf/engine",
        "//daml-lf/interpreter",
        "//daml-lf/language",
        "//daml-lf/transaction",
        "//libs-scala/contextualized-logging",
        "//libs-scala/nameof",
        "//libs-scala/scala-utils",
    ],
)
