# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_library",
    "lf_scalacopts_stricter",
)

da_scala_library(
    name = "validation",
    srcs = glob(["src/main/**/*.scala"]),
    scala_deps = [
        "@maven//:org_scalaz_scalaz_core",
    ],
    scalacopts = lf_scalacopts_stricter,
    tags = ["maven_coordinates=com.daml:daml-lf-validation:__VERSION__"],
    visibility = [
        "//compiler/scenario-service:__subpackages__",
        "//daml-lf:__subpackages__",
        "//ledger/error:__subpackages__",
    ],
    deps = [
        "//daml-lf/data",
        "//daml-lf/language",
        "//libs-scala/scala-utils",
    ],
)
