# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

# TODO Once daml_compile uses build instead of package we should use
# daml_compile instead of a genrule.
load("@build_environment//:configuration.bzl", "ghc_version", "sdk_version")
load("//daml-lf/language:daml-lf.bzl", "COMPILER_LF_VERSIONS")

# Build one DAR per LF version to bundle with the SDK.
# Also build one DAR with the default LF version for test-cases.
[
    genrule(
        name = "daml-script{}".format(suffix),
        srcs = glob(["**/*.daml"]),
        outs = ["daml-script{}.dar".format(suffix)],
        cmd = """
          set -eou pipefail
          TMP_DIR=$$(mktemp -d)
          mkdir -p $$TMP_DIR/daml/Daml/Script
          cp -L $(location Daml/Script.daml) $$TMP_DIR/daml/Daml/
          cp -L $(location Daml/Script/Free.daml) $$TMP_DIR/daml/Daml/Script/
          cat << EOF > $$TMP_DIR/daml.yaml
sdk-version: {sdk}
name: daml-script
source: daml
version: {ghc}
dependencies:
  - daml-stdlib
  - daml-prim
build-options: {build_options}
EOF
          $(location //compiler/damlc) build --project-root=$$TMP_DIR -o $$PWD/$@
          rm -rf $$TMP_DIR
        """.format(
            build_options = str([
                "--ghc-option",
                "-Werror",
                "--log-level=WARNING",
            ] + [
                "--target",
                lf_version,
            ] if lf_version else []),
            sdk = sdk_version,
            ghc = ghc_version,
        ),
        tools = ["//compiler/damlc"],
        visibility = ["//visibility:public"],
    )
    for lf_version in COMPILER_LF_VERSIONS + [""]
    for suffix in [("-" + lf_version) if lf_version else ""]
]
