# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//bazel_tools:scala.bzl", "da_scala_library")

da_scala_library(
    name = "rs-grpc-akka",
    srcs = glob(["src/main/scala/**/*.scala"]),
    scala_deps = [
        "@maven//:com_typesafe_akka_akka_actor",
        "@maven//:com_typesafe_akka_akka_stream",
    ],
    tags = ["maven_coordinates=com.daml:rs-grpc-akka:__VERSION__"],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//ledger-api/rs-grpc-bridge",
        "//ledger/error",
        "//libs-scala/contextualized-logging",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:org_reactivestreams_reactive_streams",
    ],
)
