# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//bazel_tools:java.bzl", "da_java_library")

da_java_library(
    name = "rs-grpc-bridge",
    srcs = glob(["src/main/java/**/*.java"]),
    tags = [
        "javadoc_root_packages=com.daml.grpc.adapter",
        "maven_coordinates=com.daml:rs-grpc-bridge:__VERSION__",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:org_reactivestreams_reactive_streams",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
