# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_library",
)

da_scala_library(
    name = "ledger-api-auth",
    srcs = glob(["src/main/scala/**/*.scala"]),
    resources = glob(["src/main/resources/**/*"]),
    scala_deps = [
        "@maven//:io_spray_spray_json",
        "@maven//:org_scalaz_scalaz_core",
        "@maven//:com_typesafe_akka_akka_actor",
    ],
    tags = ["maven_coordinates=com.daml:ledger-api-auth:__VERSION__"],
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [],
    deps = [
        "//daml-lf/data",
        "//ledger-api/grpc-definitions:ledger_api_proto_scala",
        "//ledger-service/jwt",
        "//ledger/error",
        "//ledger/ledger-api-common",
        "//ledger/ledger-api-domain",
        "//ledger/participant-state-index",
        "//libs-scala/contextualized-logging",
        "@maven//:com_auth0_java_jwt",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_context",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
