# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_library",
    "kind_projector_plugin",
)

da_scala_library(
    name = "ledger-api-common",
    srcs = glob(["src/main/scala/**/*.scala"]),
    plugins = [
        kind_projector_plugin,
    ],
    scala_deps = [
        "@maven//:com_typesafe_akka_akka_actor",
        "@maven//:com_typesafe_akka_akka_stream",
        "@maven//:io_spray_spray_json",
        "@maven//:org_scalaz_scalaz_core",
    ],
    tags = ["maven_coordinates=com.daml:ledger-api-common:__VERSION__"],
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        "@maven//:io_netty_netty_tcnative_boringssl_static",
    ],
    deps = [
        "//daml-lf/data",
        "//daml-lf/engine",
        "//daml-lf/transaction",
        "//language-support/scala/bindings",
        "//ledger-api/rs-grpc-bridge",
        "//ledger/error",
        "//ledger/ledger-api-akka",
        "//ledger/ledger-api-domain",
        "//ledger/ledger-api-health",
        "//ledger/ledger-offset",
        "//ledger/ledger-resources",
        "//ledger/metrics",
        "//libs-scala/contextualized-logging",
        "//libs-scala/crypto",
        "//libs-scala/logging-entries",
        "//libs-scala/resources",
        "//libs-scala/resources-akka",
        "//libs-scala/resources-grpc",
        "@maven//:commons_codec_commons_codec",
        "@maven//:commons_io_commons_io",
        "@maven//:io_dropwizard_metrics_metrics_core",
        "@maven//:io_grpc_grpc_netty",
        "@maven//:io_netty_netty_buffer",
        "@maven//:io_netty_netty_handler",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
