# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_library",
)

da_scala_library(
    name = "ledger-configuration",
    srcs = glob(["src/main/scala/**/*.scala"]),
    resources = glob(["src/main/resources/**/*"]),
    tags = ["maven_coordinates=com.daml:ledger-configuration:__VERSION__"],
    visibility = [
        "//visibility:public",
    ],
    exports = [
        "//ledger/ledger-configuration/protobuf:ledger_configuration_proto_java",
    ],
    runtime_deps = [],
    deps = [
        "//daml-lf/data",
        "//language-support/scala/bindings",
        "//ledger/ledger-configuration/protobuf:ledger_configuration_proto_java",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)
