# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//bazel_tools:proto.bzl", "proto_jars")
load(
    "//bazel_tools:scala.bzl",
    "da_scala_library",
)

proto_jars(
    name = "participant-integration-api-proto",
    srcs = glob(["src/main/protobuf/**/*.proto"]),
    maven_artifact_prefix = "participant-integration-api",
    maven_group = "com.daml",
    strip_import_prefix = "src/main/protobuf",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:any_proto",
    ],
)

compile_deps = [
    ":participant-integration-api-proto_scala",
    "//daml-lf/archive:daml_lf_archive_reader",
    "//daml-lf/archive:daml_lf_1.dev_archive_proto_java",
    "//daml-lf/data",
    "//daml-lf/engine",
    "//daml-lf/language",
    "//daml-lf/transaction",
    "//daml-lf/transaction:transaction_proto_java",
    "//daml-lf/transaction:value_proto_java",
    "//language-support/scala/bindings",
    "//ledger-api/rs-grpc-akka",
    "//ledger-api/rs-grpc-bridge",
    "//ledger/caching",
    "//ledger/error:error",
    "//ledger/ledger-api-akka",
    "//ledger/ledger-api-auth",
    "//ledger/ledger-api-client",
    "//ledger/ledger-api-common",
    "//ledger/ledger-api-domain",
    "//ledger/ledger-api-health",
    "//ledger/ledger-configuration",
    "//ledger/ledger-offset",
    "//ledger/ledger-resources",
    "//ledger/metrics",
    "//ledger/participant-state",
    "//ledger/participant-state-index",
    "//libs-scala/build-info",
    "//libs-scala/contextualized-logging",
    "//libs-scala/concurrent",
    "//libs-scala/logging-entries",
    "//libs-scala/ports",
    "//libs-scala/resources",
    "//libs-scala/resources-akka",
    "//libs-scala/resources-grpc",
    "//libs-scala/scala-utils",
    "//libs-scala/timer-utils",
    "//libs-scala/nameof",
    "@maven//:com_google_guava_guava",
    "@maven//:com_zaxxer_HikariCP",
    "@maven//:io_dropwizard_metrics_metrics_core",
    "@maven//:io_grpc_grpc_context",
    "@maven//:io_grpc_grpc_netty",
    "@maven//:io_grpc_grpc_services",
    "@maven//:io_netty_netty_handler",
    "@maven//:org_flywaydb_flyway_core",
    "@maven//:io_opentelemetry_opentelemetry_api",
    "@maven//:io_opentelemetry_opentelemetry_context",
    "@maven//:org_slf4j_slf4j_api",
    "@maven//:com_h2database_h2",
    "@maven//:org_postgresql_postgresql",
    "@maven//:com_oracle_database_jdbc_ojdbc8",
    "@maven//:com_google_api_grpc_proto_google_common_protos",
    "@maven//:com_github_ben_manes_caffeine_caffeine",
]

scala_compile_deps = [
    "@maven//:com_github_scopt_scopt",
    "@maven//:com_typesafe_akka_akka_actor",
    "@maven//:com_typesafe_akka_akka_stream",
    "@maven//:org_playframework_anorm_anorm",
    "@maven//:org_playframework_anorm_anorm_tokenizer",
    "@maven//:org_scalaz_scalaz_core",
    "@maven//:io_spray_spray_json",
]

runtime_deps = [
    "@maven//:ch_qos_logback_logback_classic",
]

da_scala_library(
    name = "participant-integration-api",
    srcs = glob(["src/main/scala/**/*.scala"]),
    resources =
        glob(
            ["src/main/resources/**/*"],
            # Do not include logback.xml into the library: let the user
            # of the sandbox-as-a-library decide how to log.
            exclude = ["src/main/resources/logback.xml"],
        ) + [
            "//ledger-api:api-version-files",
        ],
    scala_deps = scala_compile_deps,
    tags = ["maven_coordinates=com.daml:participant-integration-api:__VERSION__"],
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = runtime_deps,
    deps = compile_deps,
)

da_scala_library(
    name = "participant-integration-api-tests-lib",
    srcs = glob(["src/test/lib/**/*.scala"]),
    scala_deps = [
        "@maven//:com_typesafe_akka_akka_actor",
        "@maven//:com_typesafe_akka_akka_stream",
        "@maven//:org_scalacheck_scalacheck",
        "@maven//:org_scalactic_scalactic",
        "@maven//:org_scalatest_scalatest_freespec",
        "@maven//:org_scalatest_scalatest_core",
        "@maven//:org_scalatest_scalatest_flatspec",
        "@maven//:org_scalatest_scalatest_matchers_core",
        "@maven//:org_scalatest_scalatest_shouldmatchers",
    ],
    scala_runtime_deps = [
        "@maven//:com_typesafe_akka_akka_slf4j",
    ],
    visibility = ["//visibility:public"],
    runtime_deps = [
        "@maven//:com_h2database_h2",
        "@maven//:org_postgresql_postgresql",
    ],
    deps = [
        ":participant-integration-api",
        "//bazel_tools/runfiles:scala_runfiles",
        "//daml-lf/archive:daml_lf_1.dev_archive_proto_java",
        "//daml-lf/archive:daml_lf_archive_reader",
        "//daml-lf/data",
        "//daml-lf/engine",
        "//daml-lf/language",
        "//daml-lf/transaction",
        "//daml-lf/transaction-test-lib",
        "//language-support/scala/bindings",
        "//ledger-api/rs-grpc-bridge",
        "//ledger-api/sample-service",
        "//ledger-api/testing-utils",
        "//ledger/ledger-api-client",
        "//ledger/ledger-api-common",
        "//ledger/ledger-api-domain",
        "//ledger/ledger-api-health",
        "//ledger/ledger-configuration",
        "//ledger/ledger-offset",
        "//ledger/ledger-resources",
        "//ledger/ledger-resources:ledger-resources-test-lib",
        "//ledger/metrics",
        "//ledger/participant-state",
        "//ledger/participant-state-index",
        "//ledger/test-common:dar-files-default-lib",
        "//libs-scala/contextualized-logging",
        "//libs-scala/logging-entries",
        "//libs-scala/oracle-testing",
        "//libs-scala/ports",
        "//libs-scala/postgresql-testing",
        "//libs-scala/resources",
        "//libs-scala/resources-akka",
        "//libs-scala/resources-grpc",
        "//libs-scala/scala-utils",
        "//libs-scala/timer-utils",
        "@maven//:io_dropwizard_metrics_metrics_core",
        "@maven//:io_grpc_grpc_netty",
        "@maven//:io_netty_netty_common",
        "@maven//:io_netty_netty_handler",
        "@maven//:io_netty_netty_transport",
        "@maven//:org_flywaydb_flyway_core",
        "@maven//:org_scalatest_scalatest_compatible",
    ],
)
