# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_library",
    "kind_projector_plugin",
    "lf_scalacopts",
)

scalacopts = lf_scalacopts + [
    "-P:wartremover:traverser:org.wartremover.warts.NonUnitStatements",
]

da_scala_library(
    name = "concurrent",
    srcs = glob(["src/main/scala/**/*.scala"]),
    plugins = [
        kind_projector_plugin,
    ],
    scala_deps = [
        "@maven//:org_scalaz_scalaz_core",
    ],
    scalacopts = scalacopts,
    tags = ["maven_coordinates=com.daml:concurrent:__VERSION__"],
    visibility = [
        "//visibility:public",
    ],
)
