# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_library",
    "lf_scalacopts",
)

da_scala_library(
    name = "db-utils",
    srcs = glob(["src/main/scala/**/*.scala"]),
    scala_deps = [
        "@maven//:com_github_scopt_scopt",
        "@maven//:org_scalaz_scalaz_core",
        "@maven//:org_tpolecat_doobie_core",
        "@maven//:org_typelevel_cats_core",
        "@maven//:org_typelevel_cats_effect",
        "@maven//:org_typelevel_cats_kernel",
        "@maven//:com_typesafe_scala_logging_scala_logging",
    ],
    scala_runtime_deps = [
        "@maven//:org_tpolecat_doobie_postgres",
    ],
    scalacopts = lf_scalacopts,
    tags = ["maven_coordinates=com.daml:db-utils:__VERSION__"],
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
    ],
    deps = [
        "//libs-scala/scala-utils",
        "@maven//:com_zaxxer_HikariCP",
    ],
)
