# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_library",
    "kind_projector_plugin",
    "lf_scalacopts",
)

scalacopts = lf_scalacopts + [
    "-P:wartremover:traverser:org.wartremover.warts.NonUnitStatements",
]

da_scala_library(
    name = "gatling-utils",
    srcs = glob(["src/main/scala/**/*.scala"]),
    plugins = [
        kind_projector_plugin,
    ],
    scala_deps = [
        "@maven//:com_typesafe_akka_akka_actor",
        "@maven//:org_scalaz_scalaz_core",
        "@maven//:com_typesafe_scala_logging_scala_logging",
        "@maven//:io_spray_spray_json",
    ],
    scalacopts = scalacopts,
    tags = ["maven_coordinates=com.daml:gatling-utils:__VERSION__"],
    visibility = ["//visibility:public"],
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
    ],
    deps = [
        "//libs-scala/scala-utils",
        "@maven//:io_gatling_gatling_app",
        "@maven//:io_gatling_gatling_core",
        "@maven//:io_netty_netty_common",
        "@maven//:io_netty_netty_transport",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
