# Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load(
    "//bazel_tools:scala.bzl",
    "da_scala_macro_library",
)

da_scala_macro_library(
    name = "nameof",
    srcs = glob(["src/main/scala/**/*.scala"]),
    scalacopts = ["-Xsource:2.13"],
    tags = ["maven_coordinates=com.daml:nameof:__VERSION__"],
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        "@maven//:org_scala_lang_scala_compiler",
        "@maven//:org_scala_lang_scala_reflect",
    ],
    deps = [
        "@maven//:org_scala_lang_scala_compiler",
        "@maven//:org_scala_lang_scala_reflect",
    ],
)
